TODO
* add libcpath_codepage.h and codepage functions
* complete full path functions
  - implement libbfio_path_get_full_path_wide
  - POSIX: add support for absolute paths with x/../y
* update include header
* update man page
* add tests
* add msvscpp, borlandc5 and codegear files

20120406
* added error functions

20120405
* Worked on include header

20120403
* Worked on stand-alone version
