@@ -1,5 +1,5 @@
 /*
- * The internal libcstring header
+ * The internal libclocale header
  *
  * Copyright (c) 2008-2012, Joachim Metz <jbmetz@users.sourceforge.net>
  *
@@ -19,34 +19,33 @@
  * along with this software.  If not, see <http://www.gnu.org/licenses/>.
  */
 
-#if !defined( _CPATH_TEST_LIBCSTRING_H )
-#define _CPATH_TEST_LIBCSTRING_H
+#if !defined( _LIBCPATH_LIBCLOCALE_H )
+#define _LIBCPATH_LIBCLOCALE_H
 
 #include <common.h>
 
-/* Define HAVE_LOCAL_LIBCSTRING for local use of libcstring
+/* Define HAVE_LOCAL_LIBCLOCALE for local use of libclocale
  */
-#if defined( HAVE_LOCAL_LIBCSTRING )
+#if defined( HAVE_LOCAL_LIBCLOCALE )
 
-#include <libcstring_definitions.h>
-#include <libcstring_narrow_string.h>
-#include <libcstring_system_string.h>
-#include <libcstring_types.h>
-#include <libcstring_wide_string.h>
+#include <libclocale_codepage.h>
+#include <libclocale_definitions.h>
+#include <libclocale_locale.h>
+#include <libclocale_support.h>
 
-#elif defined( HAVE_LIBCSTRING_H )
+#elif defined( HAVE_LIBCLOCALE_H )
 
-/* If libtool DLL support is enabled set LIBCSTRING_DLL_IMPORT
- * before including libcstring.h
+/* If libtool DLL support is enabled set LIBCLOCALE_DLL_IMPORT
+ * before including libclocale.h
  */
 #if defined( _WIN32 ) && defined( DLL_IMPORT )
-#define LIBCSTRING_DLL_IMPORT
+#define LIBCLOCALE_DLL_IMPORT
 #endif
 
-#include <libcstring.h>
+#include <libclocale.h>
 
 #else
-#error Missing libcstring.h
+#error Missing libclocale.h
 #endif
 
 #endif
