@@ -8,6 +8,9 @@ TODO
 * add tests
 * add msvscpp, borlandc5 and codegear files
 
+20120407
+* updated dependencies
+
 20120406
 * added error functions
 
